--- a/index.html
+++ b/index.html
@@ -13,18 +13,51 @@
               <form id="zipForm">
                   <div class="flex-parent">
                     <label for="zipcode">Zip</label>
-                    <input class="form-control"
-                        type="input" id="zipcode" name="zipcode" 
-                        value="" required
-                    />
+                    <input class="form-control" type="input" id="zipcode" name="zipcode" value="" required/>
                     <button type="submit" class="btn btn-success"> Get the forcast!</button>
                 </div>
               </form>
           </div>
 
-          <div id="weatherList">
+          <div id="weatherList" class="flex-parent">
+            <!-- <div class="weather-list-item" data-index="INDEX">
+              <h2> MONTH  / DAY </h2>
+              <h3> WEEKDAY</h3>
+              <h3> MIN TEMP &deg;F &#124; MAX TEMP &deg;F</h3>
+            </div>
+            <div class="weather-list-item" data-index="INDEX">
+                <h2> MONTH  / DAY </h2>
+                <h3> WEEKDAY</h3>
+                <h3> MIN TEMP &deg;F &#124; MAX TEMP &deg;F</h3>
+            </div>
+            <div class="weather-list-item" data-index="INDEX">
+                <h2> MONTH  / DAY </h2>
+                <h3> WEEKDAY</h3>
+                <h3> MIN TEMP &deg;F &#124; MAX TEMP &deg;F</h3>
+            </div>
+            <div class="weather-list-item" data-index="INDEX">
+                <h2> MONTH  / DAY </h2>
+                <h3> WEEKDAY</h3>
+                <h3> MIN TEMP &deg;F &#124; MAX TEMP &deg;F</h3>
+            </div> -->
           </div>
-          <div id="currentDay">
+          <div id="currentDay" class="flex-parent">
+              <!-- <div class="current-day">
+                  <h1 class="day-header">WEEKDAY in CITY</h1>
+                    <div class="weather">
+                        <p><img src='http://openweathermap.org/img/w/ICON.png' alt=‘DESCRIPTION’/>
+                            DESCRIPTION
+                        </p>
+                    </div>
+                    <div class="details flex-parent">
+                      <div class="temperature-breakdown">
+                            <p>Morning Temperature: TEMP &deg;F</p>
+                            <p>Day Temperature: TEMP &deg;F</p>
+                            <p>Evening Temperature: TEMP &deg;F</p>
+                            <p>Night Temperature: TEMP &deg;F</p>
+                      </div>
+                    </div>
+                </div> -->
           </div>
 
       </div>
